<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter_date"
        android:orderInCategory="100"
        android:title="@string/filter_date"
        android:icon="@drawable/ic_filter_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/filter_locale"
        android:orderInCategory="101"
        android:title="@string/filter_locale"
        android:icon="@drawable/ic_filter_locale"
        app:showAsAction="never" />

    <item
        android:id="@+id/filter_genre"
        android:orderInCategory="102"
        android:title="@string/filter_genre"
        android:icon="@drawable/ic_filter_genre"
        app:showAsAction="never" />

</menu>
