<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".model.view.CreateAccount"
    tools:showIn="@layout/bar_create_account">

    <EditText
        android:id="@+id/edtNameFullCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        android:ems="10"
        android:hint="@string/hnt_fullName"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/edtEmailCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hnt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNameFullCreateAccount"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-1dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/edtPasswordCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hnt_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="@+id/edtEmailCreateAccount"
        app:layout_constraintRight_toRightOf="@+id/edtEmailCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailCreateAccount"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="-5dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btnNextStepCreateAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="154dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/next"
        android:onClick="goCreateAccountStepGenre"
        android:text="@string/btn_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordCreateAccount"
        app:layout_constraintVertical_bias="0.333"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
