<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.the.dionisio.apk.client.model.view.ShoppingCart"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/edtQtdOther"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="numberSigned"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/edtQtdWoman"
        app:layout_constraintTop_toBottomOf="@+id/edtQtdWoman"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtQtdWoman" />

    <TextView
        android:id="@+id/txtValueOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$: 100.00"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="41dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/edtQtdOther"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="41dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtValueWoman"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/txtValueWoman"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtValueWoman" />

    <TextView
        android:id="@+id/txtValueWoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtValueMan"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/txtValueMan"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtValueMan" />

    <CheckBox
        android:id="@+id/cbMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_man"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/txtValueTotal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="102dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="101dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitulo"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:text="@string/txt_qtd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtValueTotal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/txt_valueTotal"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="218dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="218dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <CheckBox
        android:id="@+id/cbWoman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_woman"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/cbMan"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cbMan" />

    <CheckBox
        android:id="@+id/cbOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_other"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/cbWoman"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/cbWoman" />

    <EditText
        android:id="@+id/edtQtdMan"
        android:layout_width="84dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="numberSigned"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/cbWoman"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="33dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/edtQtdWoman"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="numberSigned"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/edtQtdMan"
        app:layout_constraintTop_toBottomOf="@+id/edtQtdMan"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/edtQtdMan" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_opcao"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/cbMan"
        android:layout_marginStart="14dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/cbMan"
        android:layout_marginLeft="14dp" />

    <TextView
        android:id="@+id/txtValueMan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/txtValueUnit"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtValueUnit" />

    <TextView
        android:id="@+id/txtValueUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_valueUnit"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        tools:layout_constraintBaseline_creator="1"
        android:layout_marginRight="24dp" />

    <Button
        android:id="@+id/btnCheckout"
        android:onClick="callCheckout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_checkout"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="111dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="114dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Festa"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="19dp"
        android:layout_marginTop="41dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="19dp" />

</android.support.constraint.ConstraintLayout>
