<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.the.dionisio.apk.client.model.view.Setting"
    tools:showIn="@layout/bar_setting">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutEmailSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/inputEmailSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hnt_email"
            android:inputType="textEmailAddress"
            android:focusable="false"
            android:editable="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutNameSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmailSetting">

        <EditText
            android:id="@+id/inputNameSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hnt_fullName"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spLanguage"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutNameSetting" />

    <Button
        android:id="@+id/btn_confirm_settings"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:onClick="putPerson"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ListView
        android:id="@+id/listViewGenre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="13dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_settings"
        app:layout_constraintTop_toBottomOf="@+id/spLanguage"
        app:layout_constraintVertical_bias="0.312"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/spLanguage"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/spLanguage" />

</android.support.constraint.ConstraintLayout>
